--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,51 +14,65 @@
     <link rel="stylesheet" type="text/css" href="dist/css/responsive.css">
 
     <!-- BOOTSTRAP -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
     <!-- FONTAWESOME -->
     <script src="https://kit.fontawesome.com/e84fa1cf78.js" crossorigin="anonymous"></script>
 
 </head>
+
 <body>
     <div class="top-header-wrapper">
         <div class="top-header">
             <div class="info">
                 <div class="conten__info info__hiden aling-left contact">
                     <a href="tel:+57XXXXXXXXXX"><i class="fa-sharp fa-solid fa-phone"></i> +57 XXX XXX XXXX</a>
-                    <a href="mailto:prueba-usuario@prueba.com"><i class="fa-sharp fa-solid fa-envelope"></i> prueba-usuario@prueba.com</a>
+                    <a href="mailto:prueba-usuario@prueba.com"><i
+                            class="fa-sharp fa-solid fa-envelope"></i>prueba-usuario@prueba.com</a>
                 </div>
-                <div class="conten__info centrar-texto envios"><i class="fa-sharp fa-solid fa-truck"></i> ENVÍOS A TODO EL MUNDO</div>
+                <div class="conten__info centrar-texto envios"><i class="fa-sharp fa-solid fa-truck"></i> ENVÍOS A TODO
+                    EL MUNDO</div>
                 <div class="conten__info info__hiden aling-right social">
                     Siguenos:
                     <ul class="list--inline social-icons">
                         <li><a href="#" class="social-icons__link">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                                <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
-                            </svg>
-                        </a></li>
+                                <svg xmlns="http://www.w3.org/2000/svg"
+                                    class="icon icon-tabler icon-tabler-brand-facebook" viewBox="0 0 24 24"
+                                    stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                    <path
+                                        d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
+                                </svg>
+                            </a></li>
                         <li><a href="#" class="social-icons__link">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                                <rect x="4" y="4" width="16" height="16" rx="4" />
-                                <circle cx="12" cy="12" r="3" />
-                                <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
-                            </svg>
-                        </a></li>
+                                <svg xmlns="http://www.w3.org/2000/svg"
+                                    class="icon icon-tabler icon-tabler-brand-instagram" viewBox="0 0 24 24"
+                                    stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                    <rect x="4" y="4" width="16" height="16" rx="4" />
+                                    <circle cx="12" cy="12" r="3" />
+                                    <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
+                                </svg>
+                            </a></li>
                         <li><a href="#" class="social-icons__link">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-tiktok" viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                                <path d="M9 12a4 4 0 1 0 4 4v-12a5 5 0 0 0 5 5" />
-                            </svg>
-                        </a></li>
+                                <svg xmlns="http://www.w3.org/2000/svg"
+                                    class="icon icon-tabler icon-tabler-brand-tiktok" viewBox="0 0 24 24"
+                                    stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                    <path d="M9 12a4 4 0 1 0 4 4v-12a5 5 0 0 0 5 5" />
+                                </svg>
+                            </a></li>
                         <li><a href="#" class="social-icons__link">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-whatsapp" viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                                <path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9" />
-                                <path d="M9 10a0.5 .5 0 0 0 1 0v-1a0.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a0.5 .5 0 0 0 0 -1h-1a0.5 .5 0 0 0 0 1" />
-                            </svg>
-                        </a></li>
+                                <svg xmlns="http://www.w3.org/2000/svg"
+                                    class="icon icon-tabler icon-tabler-brand-whatsapp" viewBox="0 0 24 24"
+                                    stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                    <path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9" />
+                                    <path
+                                        d="M9 10a0.5 .5 0 0 0 1 0v-1a0.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a0.5 .5 0 0 0 0 -1h-1a0.5 .5 0 0 0 0 1" />
+                                </svg>
+                            </a></li>
                     </ul>
                 </div>
             </div>
@@ -69,46 +84,59 @@
                 <div class="conten__enca aling-left text">
                     <span>SOLO <b>ORO 18K</b> GARANTIZADO</span>
                     <a href="#" class="text__link text__menu">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-menu-2" viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-menu-2"
+                            viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round"
+                            stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                             <line x1="4" y1="6" x2="20" y2="6" />
                             <line x1="4" y1="12" x2="20" y2="12" />
                             <line x1="4" y1="18" x2="20" y2="18" />
-                          </svg>
+                        </svg>
                     </a>
                     <a href="#" class="text__link text__searchIco">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-search" viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-search"
+                            viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round"
+                            stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                             <circle cx="10" cy="10" r="7" />
                             <line x1="21" y1="21" x2="15" y2="15" />
                         </svg>
                     </a>
                 </div>
-                <div class="conten__enca centrar-texto envios"><img src="https://cdn.shopify.com/s/files/1/0616/4945/3207/files/logo-elite_130x.png?v=1659377051" /></div>
+                <div class="conten__enca centrar-texto envios"><img src="https://via.placeholder.com/130x109" /></div>
                 <div class="conten__enca aling-right opciones">
                     <a href="#" class="opciones__link opcion__searchIco">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-search" viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-search"
+                            viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round"
+                            stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                             <circle cx="10" cy="10" r="7" />
                             <line x1="21" y1="21" x2="15" y2="15" />
                         </svg>
                     </a>
                     <a href="#" class="opciones__link opcion__account">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user" viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user"
+                            viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round"
+                            stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                             <circle cx="12" cy="7" r="4" />
                             <path d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2" />
                         </svg>
                     </a>
                     <a href="#" class="opciones__link opcion__wishlist">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-heart" viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                            <path d="M19.5 13.572l-7.5 7.428l-7.5 -7.428m0 0a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572" />
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-heart"
+                            viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round"
+                            stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                            <path
+                                d="M19.5 13.572l-7.5 7.428l-7.5 -7.428m0 0a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572" />
                         </svg>
                     </a>
                     <a href="#" class="opciones__link opcion__card">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-shopping-cart" viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-shopping-cart"
+                            viewBox="0 0 24 24" stroke-width="1.5" fill="none" stroke-linecap="round"
+                            stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                             <circle cx="6" cy="19" r="2" />
                             <circle cx="17" cy="19" r="2" />
                             <path d="M17 17h-11v-14h-2" />
@@ -119,16 +147,102 @@
                 </div>
             </div>
         </div>
-        <div class="nav-contenido">Hola Mundo!...</div>
+        <div class="nav-bg centrar-texto">
+            <ul id="siteNav">
+                <li class="nav_items">
+                    <a href="#" class="active">INICIO</a>
+                </li>
+                <li class="nav_items">
+                    <a href="#">TIENDA</a>
+                </li>
+                <li class="nav_items">
+                    <a href="#">
+                        DESTACADO
+                        <i class="fa-solid fa-caret-down"></i>
+                    </a>
+                    <div class="megamenu" style="width:1000px;background-image:url(https://via.placeholder.com/524x400);background-position:top right;">
+                        <ul class="grid" style="padding-right:30% !important;">
+                            <li class="grid__item">
+                                <a href="#" class="grid__link">DESTACADAS</a>
+                                <ul class="sublink">
+                                    <li class="sublink__2">
+                                        <a href="#">Prueba</a>
+                                    </li>
+                                    <li class="sublink__2">
+                                        <a href="#">Prueba</a>
+                                    </li>
+                                    <li class="sublink__2">
+                                        <a href="#">Prueba</a>
+                                    </li>
+                                    <li class="sublink__2">
+                                        <a href="#">Prueba</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="grid__item">
+                                <a href="#" class="grid__link">EXCLUSIVAS</a>
+                                <ul class="sublink">
+                                    <li class="sublink__2">
+                                        <a href="#">Prueba</a>
+                                    </li>
+                                    <li class="sublink__2">
+                                        <a href="#">Prueba</a>
+                                    </li>
+                                    <li class="sublink__2">
+                                        <a href="#">Prueba</a>
+                                    </li>
+                                    <li class="sublink__2">
+                                        <a href="#">Prueba</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="grid__item">
+                                <a href="#" class="grid__link">MÁS JOYAS</a>
+                                <ul class="sublink">
+                                    <li class="sublink__2">
+                                        <a href="#">Prueba</a>
+                                    </li>
+                                    <li class="sublink__2">
+                                        <a href="#">Prueba</a>
+                                    </li>
+                                    <li class="sublink__2">
+                                        <a href="#">Prueba</a>
+                                    </li>
+                                    <li class="sublink__2">
+                                        <a href="#">Prueba</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </li>
+                <li class="nav_items">
+                    <a href="#">
+                        CATEGORÍAS
+                        <i class="fa-solid fa-caret-down"></i>
+                    </a>
+                </li>
+                <li class="nav_items">
+                    <a href="#">CONTACTO</a>
+                </li>
+            </ul>
+        </div>
     </header>
     <div class="container">
     </div>
     <footer></footer>
 
     <!-- BOOTSTRAP -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+        integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+        crossorigin="anonymous"></script>
 
 </body>
+
 </html>
